 - portability fix: fix compile bug on HP-UX (thanks to acurtis for the    patch)   (BUG#1440: Redundant class name confusing hpux compiler)